--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "SunSite",
+    "name": "sunsite",
     "version": "0.1.0",
     "private": true,
     "scripts": {
         "serve": "vue-cli-service serve",
-        "dev-build": "vue-cli-service build --mode development",
-        "build": "vue-cli-service build"
+        "build-dev": "vue-cli-service build --mode development",
+        "build-pro": "vue-cli-service build --mode production"
     },
     "dependencies": {
         "axios": "^0.19.2",
